If the LLM produces an empty script, delete it